fix sm spacing issue

--- a/assets/css/partials/_archive.scss
+++ b/assets/css/partials/_archive.scss
@@ -1,4 +1,5 @@
 .wpfc-sermon {
+  margin-bottom: 24px;
   &:last-child {
     margin-bottom: 0;
   }
